2002-09-23  Darin Adler  <darin@apple.com>

	WebCore part of fixes for proper layering when drawing subframes.

        * kwq/KWQWidget.mm: (QWidget::paint): Use the parent view in the "WebCoreFrameView"
	case so we update the scroll view too, not just the HTML part. Also use the passed in
	rectangle instead of always using the view bounds.

        * kwq/KWQScrollView.mm: (QScrollView::updateContents): Call setNeedsDisplayInRect
	instead of displayRect.

        * kwq/KWQPainter.mm:
        (QPainter::drawRect): Use NSRectFill and NSFrameRect instead of NSBezierPath.
        (QPainter::fillRect): Ditto.

2002-09-23  David Hyatt  <hyatt@apple.com>

	Don't let alternate stylesheets delay render tree construction.
	
        * khtml/html/html_headimpl.cpp:
        (HTMLLinkElementImpl::HTMLLinkElementImpl):
        (HTMLLinkElementImpl::process):
        (HTMLLinkElementImpl::setStyleSheet):
        (HTMLLinkElementImpl::sheetLoaded):
        * khtml/html/html_headimpl.h:

\2002-09-23  David Hyatt  <hyatt@apple.com>

	Make overflow:auto and scroll map to hidden until we figure
	out something better.
	
        * khtml/css/cssstyleselector.cpp:
 
2002-09-23  Darin Adler  <darin@apple.com>

	More refinement of the AppKit hackery.

        * khtml/rendering/render_replaced.cpp:
        (RenderWidget::printObject): Pass in the painter and rect.

        * kwq/qt/qwidget.h: Take a painter and rect parameter.
        * kwq/KWQWidget.mm: (QWidget::paint): Use painter; not working yet to use rect.

        * kwq/KWQFileButton.h: Change paint to take painter and rect.
        * kwq/KWQFileButton.mm: (KWQFileButton::paint): Use painter.

        * kwq/qt/qpainter.h: Added paintingDisabled() function.
        * kwq/KWQPainter.mm: (QPainter::paintingDisabled): Added.

2002-09-22  Darin Adler  <darin@apple.com>

	Change code that moves NSViews out of the way to run inside drawRect
	after a layout change rather than running at layout time. This makes